[package]
name = "carv"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.88"
dashmap = "6.1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
anyhow = "1.0"